--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,15 +17,31 @@
         tools:targetApi="31">
         <activity
             android:name=".MusicPlayerActivity"
-            android:exported="false" />
+            android:exported="true" />
+
         <activity
-            android:name=".MainActivity"
+            android:name=".LibraryActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".PlayListActivity"
+            android:exported="true">
+        </activity>
+
+        <activity
+            android:name=".AddNewPlayListActivity"
+            android:exported="true">
+        </activity>
+
+        <activity
+            android:name=".AddSongToPlayListActivity"
+            android:exported="true" >
         </activity>
     </application>
 
